# inquira-ce

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PRODUCT_REQUIREMENTS.md  README.md  VERSION  commit_message  commit_message.txt  implementation_plan.md.resolved  inquira-ce.code-workspace  inquira.policy.toml.example  inquira.toml  langgraph.json  main.py  mkdocs.yml  pyproject.toml  release_metadata.md
agents/: langgraph.json  pyproject.toml
agents/agent_v2/: code_guard.py  events.py  graph.py  manifest.json  nodes.py  router.py  runtime.py  schema_manifest.py  state.py  structured_schema.py
agents/agent_v2/coding_subagent/: __init__.py  generator.py  graph.py  schema.py
agents/agent_v2/coding_subagent/prompts/: coding_system.yaml
agents/agent_v2/memory/: summarizer.py
agents/agent_v2/prompts/: general_chat_system.yaml  react_system.yaml  result_explanation_system.yaml  router_system.yaml
agents/agent_v2/services/: __init__.py  chat_model_factory.py  llm_provider_catalog.py  llm_runtime_config.py  output_capture.py  tracing.py
agents/agent_v2/tools/: bash_tool.py  execute_python.py  finish_analysis.py  pip_install.py  sample_data.py  schema_chunks.py  search_schema.py  validate_result.py
agents/tests/: test_agent_prompt_policy.py  test_agent_runtime_config.py  test_agent_tool_surface.py  test_agent_v2_analysis_nodes.py  test_agent_v2_async_contract.py  test_agent_v2_async_invocation.py  test_agent_v2_event_stream_binding.py  test_agent_v2_graph.py  test_agent_v2_memory_summarizer.py  test_agent_v2_model_selection.py  test_agent_v2_nodes.py  test_agent_v2_schema_chunks_tool.py  test_agent_v2_schema_query_enforcement.py  test_bash_tool_cross_platform.py  test_chat_model_factory.py  test_code_guard.py  test_langgraph_config.py  test_result_explanation_prompt_style.py  test_runtime_import_boundary.py  test_search_schema_tool.py  test_shared_phoenix_tracing.py  test_structured_output_schema_compat.py  test_tool_call_explanations.py  test_tool_result_cache.py
backend/: README.md  alembic.ini  main.py  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_v1_initial_schema.py  0002_v1_workspace_deletion_jobs.py  0003_v1_user_preferences.py  0004_v1_llm_provider_preferences.py  0005_v1_coding_model_preference.py  0006_v1_terminal_risk_acknowledged.py  0007_v1_provider_model_catalog_overrides.py  0008_v1_llm_advanced_settings.py  0009_v1_dataset_deletion_jobs.py  0010_v1_slow_request_warning_preference.py  0011_v1_slow_request_warning_default_120.py  0012_v1_turn_tree_metadata.py  0013_v1_llm_data_samples_preference.py  0014_v1_workspace_context_and_dataset_ingestion_jobs.py  0015_v1_turn_storage_metadata.py  0016_v1_resource_leases.py  0017_v1_atomic_turn_seq_and_active_workspace.py  0018_v1_job_claims.py  0019_v1_dataset_schema_status_metadata.py  0020_v1_turn_sibling_order.py
backend/app/: app_config.json  main.py
backend/app/agent/: __init__.py  code_guard.py  events.py  graph.py  registry.py
backend/app/agent_v2/: __init__.py  graph.py  nodes.py  registry.py  router.py  runtime.py  state.py  streaming.py
backend/app/agent_v2/memory/: summarizer.py
backend/app/agent_v2/prompts/: general_chat_system.yaml  react_system.yaml  (+1 more)
backend/app/api/: api_test.py  auth.py  chat.py  data_inspect.py  data_preview.py  datasets.py  execute.py  legal.py  schemas.py  settings.py  system.py
backend/app/coding_agent/: __init__.py  schema.py
backend/app/core/: config_models.py  fingerprint.py  logger.py  path_utils.py
backend/app/data_access/: __init__.py  coordinator.py  registry.py  scratchpad_db.py  workspace_db.py
backend/app/database/: database.py  database_manager.py  db_tools.py  schema_storage.py
backend/app/legal/: terms.md
backend/app/services/: agent_client.py  agent_service_config.py  artifact_scratchpad.py  chat_model_factory.py  code_executor.py  code_whisperer.py  dataframe_query.py  execution_config.py  execution_service.py  jupyter_message_parser.py  llm_provider_catalog.py  llm_runtime_config.py  llm_service.py  model_registry.py  output_capture.py  provider_model_refresh.py  readonly_python_execution.py  runner_env.py  session_variable_store.py  terminal_executor.py  tracing.py  websocket_manager.py  workspace_kernel_manager.py  workspace_resource_monitor.py
backend/app/tools/: reset_password.py
backend/data/: models.json
backend/docs/: database-access.md
backend/scripts/: download_offline_assets.py  export_openapi.py
backend/scripts/debug/: test_execute.py
backend/scripts/maintenance/: db_split_migration_v3_runbook.md
backend/sql/supabase/: account_plans.sql
backend/tests/: conftest.py  test_agent_client.py  test_agent_execution_authority.py  test_agent_intervention_service.py  test_agent_plan_and_explanation_contract.py  test_agent_registry.py  test_agent_runtime_path_resolution_guard.py  test_agent_schema_manifest.py  test_agent_service_config.py  test_agent_tool_surface_contract.py  test_agent_v2_ephemeral_events.py  test_agent_v2_execute_python_tool.py  test_agent_v2_nodes_serialization.py  test_agent_v2_pip_install_tool.py  test_agent_v2_router.py  test_agent_v2_sample_data_tool.py  test_agent_v2_self_sufficient.py  test_artifact_scratchpad.py  test_auth_logging.py  test_backend_agent_runtime_boundary.py  test_backend_main_runtime_env.py  test_backend_packaging_metadata.py  test_branch_summary_service.py  test_bump_versions_script.py  test_ce_local_user.py  test_chat_endpoint.py  test_chat_model_factory.py  test_chat_multimodal_and_state.py  test_chat_service_runtime_wrapping.py  test_chat_streaming.py  test_ci_workflow_runtime_guardrails.py  test_code_executor_provider.py  test_code_guard.py  test_codegen_prompt_contract.py  test_codegen_prompt_rules.py  test_coding_agent_module.py  test_config_models.py  test_conversation_usage_summary.py  test_cors_config.py  test_data_preview.py  (+150 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitkeep
src-tauri/src/: lib.rs
(+817 files in other folders)
