[project]
name = "inquira-ce"
version = "0.4.5a1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "google-genai>=1.32.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "statsmodels>=0.14.5",
    "sympy>=1.14.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
inquira = "inquira.main:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
inquira = [
    "app_config.json",
    "frontend/dist/**/*",
    "logo/*",
    "prompts/*",
    "sql/*",
]
