[project]
name = "inquira-agent-runtime"
version = "0.1.0"
description = "External LangGraph agent runtime for Inquira desktop"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.119.1",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.1",
  "langchain>=1.0.1",
  "langchain-openai>=1.0.1",
  "langchain-ollama>=1.0.0",
  "langchain-anthropic>=0.3.0",
  "langgraph-checkpoint-sqlite>=2.0.11",
  "langgraph-cli[inmem]>=0.4.4",
  "sse-starlette>=2.1.3",
  "arize-phoenix>=13.3.0",
  "openinference-instrumentation-langchain>=0.1.59",
  "pydantic>=2.11.7",
  "duckdb>=1.3.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_v2", "agent_v2.*"]
