[project]
name = "inquira-ce"
version = "0.4.6a0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "duckdb>=1.3.2",
    "fastapi>=0.119.1",
    "google-genai>=1.32.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.32.0",
    "langchain[google-genai]>=1.0.1",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.4.4",
    "sse-starlette>=2.1.3",
]

[project.scripts]
inquira = "app.main:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]

[tool.setuptools.package-data]
app = [
    "app_config.json",
    "frontend/dist/**/*",
    "logo/*",
    "prompts/*",
    "sql/*",
    "legal/*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
