[project]
name = "inquira-ce"
version = "0.5.7a3"
description = "Inquira community edition backend and bundled web UI for local AI-assisted data analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "safe-py-runner>=0.1.6",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "colorama>=0.4.6",
    "duckdb>=1.3.2",
    "fastapi>=0.119.1",
    "google-genai>=1.32.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "keyring>=25.6.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "psycopg[binary]>=3.2.10",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.32.0",
    "langchain[google-genai]>=1.0.1",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.4.4",
    "sse-starlette>=2.1.3",
    "arize-phoenix>=13.3.0",
    "openinference-instrumentation-langchain>=0.1.59",
]

[project.scripts]
inquira = "app.main:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]

[tool.setuptools.package-data]
app = [
    "app_config.json",
    "frontend/dist/**/*",
    "logo/*",
    "prompts/*",
    "sql/*",
    "legal/*",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.13.1",
]
